2002-12-15  Pavel Roskin  <proski@gnu.org>

	* cmd.c (mkdir_cmd): Don't try to create a directory with empty
	name.

	* global.h: Add replacement for O_NONBLOCK.

2002-12-11  Pavel Roskin  <proski@gnu.org>

	* find.c (find_file): Skip entries without data when panelizing.
	Found by Valgrind.

	* eregex.h: Undefine __restrict_arr before redefining to avoid a
	warning if it's defined.

2002-12-09  Pavel Roskin  <proski@gnu.org>

	* util.c (load_file_position): Don't free filename.

2002-12-08  Pavel Roskin  <proski@gnu.org>

	* util.c: Add functions for saving and loading file positions.

2002-12-07  Pavel Roskin  <proski@gnu.org>

	* file.c (is_wildcarded): Move ...
	* filegui.c: ... here.  Make static.

2002-12-01  Pavel Roskin  <proski@gnu.org>

	* cmd.c (do_edit_at_line): Set line to 0 to allow the editor to
	decide if the user cares about the initial line or not.
	* main.c: Set edit_one_file_start_line to 0 initially.

2002-11-29  Pavel Roskin  <proski@gnu.org>

	* setup.c: Add option_save_position to the options table.

2002-11-28  Pavel Roskin  <proski@gnu.org>

	* tree.c: Make struct WTree opaque.  Remove "done" flag - it's
	broken by design.
	(tree_selected_name): New function, return name of the currently
	selected entry.  Use it where WTree is opaque.
	* boxes.c (tree_callback): Don't check for the "done" flag - it
	causes closing the dialog on any key after mouse selection.

	* user.h: Don't include edit/edit-widget.h.
	* user.c: Include edit/edit-widget.h and edit/edit.h.

	* slint.c (getch): Return -1, not SLANG_GETKEY_ERROR, otherwise
	get_key_code() crashes when calling isalpha().

	* color.c (mc_init_pair) [HAVE_SLANG]: Pass "default", not NULL
	to SLtt_set_color() - it fixes transparency with the latest
	versions of S-Lang.  Treat foreground like background.

2002-11-20  Pavel Roskin  <proski@gnu.org>

	* main.c: Eliminate finish_program variable - mc can now exit
	immediately.

2002-11-17  Pavel Roskin  <proski@gnu.org>
